cmake_minimum_required(VERSION 2.8)
PROJECT(CSTRUCTURES)
#FILE(WRITE ./include/config.h "#define MESH_VIEWER_PATH \"${PROJECT_SOURCE_DIR}\"")
add_compile_options(-Wall -g -lstdc++)
#set(CMAKE_EXE_LINKER_FLAGS ${CMAKE_EXE_LINKER_FLAGS} -no-pie)
#生成可执行程序
set(CMAKE_CXX_FLAGS ${CMAKE_CXX_FLAGS} -std=c++11)
set(CMAKE_C_FLAGS ${CMAKE_C_FLAGS} -std=c11)
#find_package(TOOLS_NODE)
#if(TOOLS_NODE_FOUND)
#	message("${TOOLS_NODE_LIBRARY}")
#endif(TOOLS_NODE_FOUND)
add_subdirectory(./src)
add_subdirectory(./src/iterator)
include_directories(${PROJECT_SOURCE_DIR}/include)
link_directories(${PROJECT_SOURCE_DIR}/lib ${PROJECT_SOURCE_DIR}/temp_libs)
if(CMAKE_SYSTEM_NAME MATCHES "Linux")
link_libraries(m dl cstructures)
elseif(CMAKE_SYSTEM_NAME MATCHES "Windows")
link_libraries(m dl)
endif(CMAKE_SYSTEM_NAME MATCHES "Linux")
aux_source_directory(${PROJECT_SOURCE_DIR}/Demo mysrc)
set(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/bin)
add_executable(main ${mysrc})
target_link_libraries(main cstructures)

